--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@ body {
   box-sizing: border-box;
 }
 
-/* =============================== Common CSS Start ============================ */
+/* ====================================== Common CSS Start ========================================= */
 
 .container {
   width: 1200px;
@@ -85,7 +85,6 @@ body {
 .col-4 {
   width: calc(100% / 3);
 }
-
 .table {
   margin-top: 25px;
 }
@@ -151,7 +150,14 @@ body {
   font-size: 16px;
 }
 
-/* =============================== Common CSS End ============================ */
+@media only screen and (min-width: 992px) and (max-width: 1250px) {
+  .container {
+    width: 970px;
+  }
+}
+/* ====================================== Common CSS End ========================================= */
+
+/* ====================================== Landing Page Start ===================================== */
 
 .banner-div-top {
   background-image: linear-gradient(
@@ -355,6 +361,13 @@ body {
 .number-icon {
   display: none;
 }
+
+@media only screen and (min-width: 1251px) and (max-width: 1550px) {
+  .main-container {
+    margin-left: 200px;
+  }
+}
+/* ====================================== Landing Page End ===================================== */
 
 /* ====================================== Dashboard page Start ================================= */
 
@@ -703,6 +716,41 @@ body {
   top: 10px;
   cursor: pointer;
 }
+
+@media only screen and (min-width: 1251px) and (max-width: 1550px) {
+  .dashboard-home-card1 {
+    width: 25%;
+  }
+  .dashboard-home-card2 {
+    width: 71%;
+  }
+  .dashboard-home-card3 {
+    width: 48%;
+  }
+  .dashboard-home-card5 {
+    width: 100%;
+    gap: 40px;
+    justify-content: space-between;
+  }
+  .dashboard-home-card5-top {
+    width: 48%;
+  }
+  .dashboard-home-card5-bottom {
+    width: 48%;
+    /* background-color: #fff; */
+    /* box-shadow: 0px 0px 30px #dddddd75; */
+    /* border-radius: 15px; */
+    padding: 20px;
+    align-self: auto;
+    /* position: relative; */
+  }
+  .dashboard-container {
+    width: 1000px;
+  }
+}
+
+@media only screen and (min-width: 1220px) and (max-width: 1450px) {
+}
 /*=========================================== Dashboard Page End ==================================== */
 
 /*=========================================== Product Page Start ==================================== */
@@ -932,6 +980,8 @@ body {
   color: #fff;
 }
 
+@media only screen and (min-width: 1220px) and (max-width: 1450px) {
+}
 /*=========================================== Product Page End ====================================== */
 
 /* ========================================= Mint Page Start ======================================== */
@@ -1071,6 +1121,9 @@ body {
 .create-mint-container select:focus {
   outline: none;
 }
+
+@media only screen and (min-width: 1220px) and (max-width: 1450px) {
+}
 /* ========================================= Mint Page End ======================================== */
 
 /* ========================================== Coupon page Start ===================================  */
@@ -1168,6 +1221,9 @@ input[type="radio"]:focus {
 input[type="radio"]:checked {
   border-color: #00e2b3;
 }
+
+@media only screen and (min-width: 1220px) and (max-width: 1450px) {
+}
 /* ============================== Coupon Page End ============================ */
 
 /* ============================= Contact Page Start ========================= */
@@ -1233,6 +1289,8 @@ input[type="radio"]:checked {
   width: auto;
 }
 
+@media only screen and (min-width: 1220px) and (max-width: 1450px) {
+}
 /* ============================= Contact Page End =========================== */
 
 /* ============================= About Page Start =========================== */
@@ -1262,6 +1320,8 @@ input[type="radio"]:checked {
   margin-bottom: 0px;
 }
 
+@media only screen and (min-width: 1220px) and (max-width: 1450px) {
+}
 /* ============================= About Page End ============================= */
 
 /* ============================= Invoice Page Start ========================= */
@@ -1302,6 +1362,8 @@ input[type="radio"]:checked {
   width: 10%;
 }
 
+@media only screen and (min-width: 1220px) and (max-width: 1450px) {
+}
 /* ============================= Invoice Page End ========================= */
 
 /* ============================= Order Page Start ========================= */
@@ -1348,6 +1410,8 @@ input[type="radio"]:checked {
   color: #fff;
 }
 
+@media only screen and (min-width: 1220px) and (max-width: 1450px) {
+}
 /* ============================= Order Page End ========================= */
 
 /* ============================= Profile Page Start ==================== */
@@ -1413,6 +1477,9 @@ input[type="radio"]:checked {
 }
 .option.active {
   background-color: #c2ccff;
+}
+
+@media only screen and (min-width: 1220px) and (max-width: 1450px) {
 }
 /* ============================= Profile Page End ==================== */
 
