--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -75,6 +75,7 @@ body {
   border-radius: 5px;
   border: none;
   color: #fff;
+  cursor: pointer;
 }
 .col-12 {
   width: 100%;
@@ -171,6 +172,11 @@ body {
   }
   .main-container {
     margin-left: 200px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .main-container {
+    margin-left: 0px;
   }
 }
 /* ====================================== Common CSS End ========================================= */
@@ -1146,6 +1152,7 @@ body {
   border: 1px solid #a0a0a0c4;
   border-radius: 5px;
   padding: 5px;
+  cursor: pointer;
 }
 .mint-new-item-collection svg.icon-1 {
   width: 22px;
