update home nav

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -405,6 +405,17 @@ body {
   display: none;
 }
 
+@media only screen and (min-width: 992px) and (max-width: 1250px) {
+  .home-how-it-work .background-level {
+    background-size: contain;
+    width: 70%;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+}
+@media only screen and (min-width: 551px) and (max-width: 767px) {
+}
+
 /* ====================================== Landing Page End ===================================== */
 
 /* ====================================== Dashboard page Start ================================= */
@@ -869,6 +880,7 @@ body {
     align-self: auto;
   }
 }
+
 /*=========================================== Dashboard Page End ==================================== */
 
 /*=========================================== Product Page Start ==================================== */
