--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -95,3 +95,10 @@
   margin: 0px 3px;
   color: #fff;
 }
+
+@media only screen and (min-width: 992px) and (max-width: 1250px) {
+  #footerSwop-logo {
+    height: 30px;
+    width: auto;
+  }
+}
