--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -102,3 +102,8 @@
     width: auto;
   }
 }
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .footer-inform-content {
+    margin-top: 30px;
+  }
+}
