--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -450,6 +450,9 @@ body {
   .polygon-blockchain-div .col-6 {
     width: 100%;
   }
+  #polygon-matic-badge {
+    width: 50%;
+  }
   .dashboard-div {
     background-image: radial-gradient(
       farthest-corner at 375px 85px,
@@ -465,7 +468,7 @@ body {
     width: 100%;
   }
   #swop-dashboard {
-    width: 80%;
+    width: 50%;
     height: auto;
     left: 0%;
     transform: translateX(0%);
@@ -497,7 +500,7 @@ body {
     );
     padding-right: 0px;
     border-radius: 10px;
-    margin-top: 50px;
+    margin-top: 15px;
     text-align: center;
   }
   .send-link-div .col-6 {
