--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -228,6 +228,16 @@
   }
 }
 
+@media only screen and (min-width: 451px) and (max-width: 550px) {
+  #sidebar-menu-top {
+    display: block;
+  }
+}
+@media only screen and (min-width: 350px) and (max-width: 450px) {
+  #sidebar-menu-top {
+    display: block;
+  }
+}
 @media only screen and (min-width: 360px) and (max-width: 424px) {
   .dapp-cross,
   .dapp-three-line {
