--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -131,6 +131,8 @@
 @media only screen and (min-width: 451px) and (max-width: 550px) {
   .footer-inform-content {
     margin-top: 30px;
+    text-align: -webkit-center;
+    width: 100%;
   }
   .footer-same {
     margin-top: 30px;
